<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

    <include layout="@layout/app_bar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/gray_border_1px"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="2dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:hint="@string/text_hint_edit_phone"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_margin="1dp"
                        android:paddingLeft="20dp" />

                    <Button
                        android:id="@+id/get_code"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_alignParentRight="true"
                        style="@style/btn"
                        android:text="@string/text_send_code" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/confirm_code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/gray_border_1px"
                    android:gravity="center_vertical"
                    android:hint="@string/text_hint_edit_code"
                    android:paddingStart="20dp"
                    android:inputType="number"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp" />

                <EditText
                    android:id="@+id/password_1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/gray_border_1px"
                    android:gravity="center_vertical"
                    android:hint="@string/text_hint_edit_new_password"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp" />

                <EditText
                    android:id="@+id/password_2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/gray_border_1px"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:hint="@string/text_hint_edit_confirm_password"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp" />

                <Button
                    android:id="@+id/register_btn"
                    android:layout_marginTop="24dp"
                    style="@style/btn_commit"
                    android:text="@string/text_confirm" />

            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/text_agree_protocol"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/text_app_protocol"
            android:textColor="@color/text_blue" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
