<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.SurroundingFacilitiesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/top_bar_layout"
            layout="@layout/app_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top_bar_layout"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/poi_detail"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="top"
                android:background="@drawable/border_bg"
                android:visibility="gone">

                <TextView
                    android:id="@+id/poi_name"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textColor="#5566b8"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/poi_address"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/poi_name"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </RelativeLayout>

            <com.amap.api.maps2d.MapView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_bus" />

                <View style="@style/parting_line" />

                <TextView
                    android:id="@+id/metro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_metro" />

                <View style="@style/parting_line" />

                <TextView
                    android:id="@+id/education"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_education" />

                <View style="@style/parting_line" />

                <TextView
                    android:id="@+id/bank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_bank" />

                <View style="@style/parting_line" />

                <TextView
                    android:id="@+id/hospital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_hospital" />

                <View style="@style/parting_line" />

                <TextView
                    android:id="@+id/casual"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_casual" />

                <View style="@style/parting_line" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
