<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<TableLayout
    android:background="@color/divider_line"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/vTopLine"
        style="@style/divider_line"/>
    <TableRow>

        <TextView
            android:id="@+id/tvTime"
            android:background="@color/white"
            android:paddingRight="@dimen/padding_table_row"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginBottom="@dimen/line_1px"
            android:layout_marginLeft="@dimen/line_1px"
            android:layout_marginRight="@dimen/line_1px"
            android:gravity="center"
            android:text="@string/text_time" />


        <TextView
            android:id="@+id/tvOperation"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingRight="@dimen/padding_table_row"
            android:layout_marginBottom="@dimen/line_1px"
            android:gravity="center"
            android:text="@string/text_operator" />


        <TextView
            android:id="@+id/tvLog"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:paddingTop="@dimen/padding_table_row"
            android:paddingBottom="@dimen/padding_table_row"
            android:layout_marginBottom="@dimen/line_1px"
            android:layout_marginLeft="@dimen/line_1px"
            android:layout_marginRight="@dimen/line_1px"
            android:gravity="center"
            android:text="@string/text_operator_record" />
    </TableRow>
</TableLayout>
    </LinearLayout>

</LinearLayout>