<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/app_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/old_password_" />

                <EditText
                    android:id="@+id/etCurrentPassword"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/gray_border_1dp"
                    android:inputType="textPassword" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/new_password_" />

                <EditText
                    android:id="@+id/etNewPassword"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/gray_border_1dp"
                    android:inputType="textPassword" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cbShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/show_password"
                android:textColor="@color/text_gray_dark" />

        </LinearLayout>

        <View
            style="@style/divider_line"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnCommit"
            style="@style/btn_commit"
            android:backgroundTint="@color/colorPrimary"
            android:layout_margin="16dp"
            android:text="@string/modify_password" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>