<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.SecurityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/app_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pbSecurity"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@mipmap/security_level"
                style="@style/progress_horizontal"
                android:max="100"
                android:progress="70"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/text_your_security_level"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tvSecurityLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="15dp"
                    tools:text="高" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rlPassword"
                    android:background="@drawable/bg_btn_item"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="64dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/text_login_password" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/icon_right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="@color/text_color_black"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:text="@string/text_modify" />
                </RelativeLayout>
            </LinearLayout>

        <View style="@style/divider_line" />

        <RelativeLayout
            android:id="@+id/rlSafeModifyPhone"
            android:background="@drawable/bg_btn_item"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:gravity="center"
                android:text="@string/text_safe_phone" />

            <ImageView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="0dp"
                android:src="@mipmap/icon_right" />

            <TextView
                android:id="@+id/tvSafeModifyPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/text_color_black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:text="134****3242" />
        </RelativeLayout>

        <View style="@style/divider_line" />

        <Button
            android:id="@+id/btnLogout"
            android:text="@string/logout"
            android:layout_margin="16dp"
            style="@style/btn_commit" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
